translation-tool/inputs/source_meta/objects/HSvc_SIC_Error_Map__mdt.object
<CustomObject>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>es_CO</fullName>
                    <default>true</default>
                    <label>Spanish (Colombia)</label>
                </value>
                <value>
                    <fullName>en_US</fullName>
                    <label>English (United States)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SIC Error Map</label>
    <pluralLabel>SIC Error Maps</pluralLabel>
</CustomObject>